--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "test:watch": "jest --coverage=false --onlyChanged --watch --runInBand",
     "test:lint": "eslint",
     "test:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js --coverage=false --onlyChanged --watch --runInBand --no-cache",
-    "start:watch": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch src/dist/index.js",
+    "start:watch": "npm-run-all --parallel build:watch start:nodemon",
+    "start:nodemon": "nodemon --inspect=0.0.0.0 --ext js --legacy-watch src/dist/index.js",
     "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext js --legacy-watch src/dist/index.js",
     "build": "tsc",
-    "build:watch": "tsc --watch"
+    "build:watch": "tsc --watch",
+    "build:start": "npm run build && node src/dist/index.js"
   },
   "author": "John Watson",
   "license": "MIT",
@@ -47,7 +49,8 @@
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
     "neostandard": "0.11.4",
-    "nodemon": "3.1.4"
+    "nodemon": "3.1.4",
+    "npm-run-all": "4.1.5"
   },
   "nodemonConfig": {
     "ignore": [
