--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
+    "blipp": "4.0.2",
     "eslint": "9.10.0",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
