--- a/package.json
+++ b/package.json
@@ -44,6 +44,12 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
+    "@babel/core": "7.25.2",
+    "@babel/preset-env": "7.25.4",
+    "@babel/preset-typescript": "7.24.7",
+    "@types/jest": "29.5.13",
+    "babel-jest": "29.7.0",
+    "babel-plugin-transform-import-meta": "2.2.1",
     "blipp": "4.0.2",
     "eslint": "9.10.0",
     "jest": "29.7.0",
