--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ./src:/home/node/src
       - ./package.json:/home/node/package.json
+    networks:
+      - hapi-template-ts
 
 networks:
   hapi-template-ts:
