Remove legacy compose

--- a/compose.test.debug.yaml
+++ b/compose.test.debug.yaml
@@ -1,7 +1,7 @@
 services:
   hapi-template-ts:
     extends:
-      file: docker-compose.test.watch.yaml
+      file: compose.test.watch.yaml
       service: hapi-template-ts
     command: npm run test:debug
     ports:
