--- a/compose.test.watch.yaml
+++ b/compose.test.watch.yaml
@@ -1,7 +1,7 @@
 services:
   hapi-template-ts:
     extends:
-      file: docker-compose.test.yaml
+      file: compose.test.yaml
       service: hapi-template-ts
     command: npm run test:watch
     volumes:
