--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,22 +6,22 @@
     {
       "label": "compose-debug-up",
       "type": "shell",
-      "command": "docker-compose -f docker-compose.yaml -f docker-compose.override.yaml -f docker-compose.debug.yaml up -d"
+      "command": "compose -f compose.yaml -f compose.override.yaml -f compose.debug.yaml up -d"
     },
     {
       "label": "compose-debug-down",
       "type": "shell",
-      "command": "docker-compose -f docker-compose.yaml -f docker-compose.override.yaml -f docker-compose.debug.yaml down"
+      "command": "compose -f compose.yaml -f compose.override.yaml -f compose.debug.yaml down"
     },
     {
       "label": "compose-test-debug-up",
       "type": "shell",
-      "command": "docker-compose -f docker-compose.yaml -f docker-compose.test.yaml -f docker-compose.test.debug.yaml up -d"
+      "command": "compose -f compose.yaml -f compose.test.yaml -f compose.test.debug.yaml up -d"
     },
     {
       "label": "compose-test-debug-down",
       "type": "shell",
-      "command": "docker-compose -f docker-compose.yaml -f docker-compose.test.yaml -f docker-compose.test.debug.yaml down"
+      "command": "compose -f compose.yaml -f compose.test.yaml -f compose.test.debug.yaml down"
     }
   ]
 }
