--- a/package.json
+++ b/package.json
@@ -25,16 +25,6 @@
     "@hapi/hapi": "21.3.10",
     "@hapi/inert": "7.1.0",
     "@hapi/vision": "7.0.3",
-    "@types/convict": "6.1.6",
-    "@types/convict-format-with-validator": "6.0.5",
-    "@types/hapi__boom": "7.4.1",
-    "@types/hapi__crumb": "7.3.7",
-    "@types/hapi__hapi": "20.0.13",
-    "@types/hapi__inert": "5.2.10",
-    "@types/hapi__vision": "5.5.8",
-    "@types/hapi-pino": "9.1.2",
-    "@types/joi": "17.2.2",
-    "@types/nunjucks": "3.2.6",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
     "hapi-pino": "12.1.0",
@@ -47,7 +37,18 @@
     "@babel/core": "7.25.2",
     "@babel/preset-env": "7.25.4",
     "@babel/preset-typescript": "7.24.7",
+    "@types/convict": "6.1.6",
+    "@types/convict-format-with-validator": "6.0.5",
+    "@types/hapi__boom": "7.4.1",
+    "@types/hapi__crumb": "7.3.7",
+    "@types/hapi__hapi": "20.0.13",
+    "@types/hapi__inert": "5.2.10",
+    "@types/hapi__vision": "5.5.8",
+    "@types/hapi-pino": "9.1.2",
     "@types/jest": "29.5.13",
+    "@types/joi": "17.2.2",
+    "@types/node": "22.13.10",
+    "@types/nunjucks": "3.2.6",
     "babel-jest": "29.7.0",
     "babel-plugin-transform-import-meta": "2.2.1",
     "blipp": "4.0.2",
