--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@hapi/crumb": "9.0.1",
     "@hapi/hapi": "21.3.10",
     "@hapi/inert": "7.1.0",
+    "@hapi/scooter": "7.0.0",
     "@hapi/vision": "7.0.3",
+    "blankie": "5.0.0",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
     "hapi-pino": "12.1.0",
