--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hapi-template-ts",
   "version": "1.0.0",
   "description": "",
-  "main": "src/dist/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
     "test": "jest --runInBand --forceExit",
@@ -10,11 +10,11 @@
     "test:lint": "eslint",
     "test:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js --coverage=false --onlyChanged --watch --runInBand --no-cache",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
-    "start:nodemon": "nodemon --inspect=0.0.0.0 --ext js,css,njk --legacy-watch src/dist/index.js",
-    "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts --legacy-watch src/dist/index.js",
+    "start:nodemon": "nodemon --inspect=0.0.0.0 --ext js,css,njk --legacy-watch dist/index.js",
+    "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts --legacy-watch dist/index.js",
     "build": "tsc",
     "build:watch": "tsc --watch --sourceMap",
-    "build:start": "npm run build && node src/dist/index.js"
+    "build:start": "npm run build && node dist/index.js"
   },
   "author": "John Watson",
   "license": "MIT",
@@ -54,7 +54,7 @@
     "babel-jest": "29.7.0",
     "babel-plugin-transform-import-meta": "2.2.1",
     "blipp": "4.0.2",
-    "eslint": "9.21.0",
+    "eslint": "9.39.1",
     "jest": "29.7.0",
     "jest-junit": "16.0.0",
     "neostandard": "0.11.4",
