--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test:lint": "eslint",
     "test:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js --coverage=false --onlyChanged --watch --runInBand --no-cache",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
-    "start:nodemon": "nodemon --inspect=0.0.0.0 --ext js,css,njk --legacy-watch dist/index.js",
-    "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts --legacy-watch dist/index.js",
+    "start:nodemon": "nodemon --inspect=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --legacy-watch dist/index.js",
+    "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --legacy-watch dist/index.js",
     "build": "tsc",
     "build:watch": "tsc --watch --sourceMap",
     "build:start": "npm run build && node dist/index.js"
