--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "dist/index.js",
   "scripts": {
     "pretest": "npm run test:lint",
-    "test": "jest --runInBand --forceExit",
-    "test:watch": "jest --coverage=false --onlyChanged --watch --runInBand",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:lint": "eslint",
-    "test:debug": "node --inspect-brk=0.0.0.0 ./node_modules/jest/bin/jest.js --coverage=false --onlyChanged --watch --runInBand --no-cache",
+    "test:debug": "vitest --inspect-brk",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
     "start:nodemon": "nodemon --inspect=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --legacy-watch dist/index.js",
     "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --legacy-watch dist/index.js",
     "build": "tsc",
     "build:watch": "tsc --watch --sourceMap",
-    "build:start": "npm run build && node dist/index.js"
+    "build:start": "npm run build && node dist/index.js",
+    "docker:test": "npm run test:lint && mkdir -p coverage 2>/dev/null || true && docker compose -p hapi-template-ts-test down -v && docker compose -f compose.yaml -f compose.test.yaml -p hapi-template-ts-test run --build --rm hapi-template-ts",
+    "docker:test:watch": "docker compose -p hapi-template-ts-test down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml -p hapi-template-ts-test run --build --rm hapi-template-ts"
   },
   "author": "John Watson",
   "license": "MIT",
@@ -36,9 +38,6 @@
     "typescript": "5.6.2"
   },
   "devDependencies": {
-    "@babel/core": "7.25.2",
-    "@babel/preset-env": "7.25.4",
-    "@babel/preset-typescript": "7.24.7",
     "@types/convict": "6.1.6",
     "@types/convict-format-with-validator": "6.0.5",
     "@types/hapi__boom": "7.4.1",
@@ -47,19 +46,15 @@
     "@types/hapi__inert": "5.2.10",
     "@types/hapi__vision": "5.5.8",
     "@types/hapi-pino": "9.1.2",
-    "@types/jest": "29.5.13",
     "@types/joi": "17.2.2",
     "@types/node": "22.13.10",
     "@types/nunjucks": "3.2.6",
-    "babel-jest": "29.7.0",
-    "babel-plugin-transform-import-meta": "2.2.1",
     "blipp": "4.0.2",
     "eslint": "9.39.1",
-    "jest": "29.7.0",
-    "jest-junit": "16.0.0",
     "neostandard": "0.11.4",
     "nodemon": "3.1.4",
-    "npm-run-all": "4.1.5"
+    "npm-run-all": "4.1.5",
+    "vitest": "4.0.15"
   },
   "nodemonConfig": {
     "ignore": [
