--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "@hapi/inert": "7.1.0",
     "@hapi/scooter": "7.0.0",
     "@hapi/vision": "7.0.3",
-    "@vitest/coverage-v8": "4.0.15",
     "blankie": "5.0.0",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
@@ -55,7 +54,8 @@
     "neostandard": "0.11.4",
     "nodemon": "3.1.4",
     "npm-run-all": "4.1.5",
-    "vitest": "4.0.15"
+    "vitest": "4.0.15",
+    "@vitest/coverage-v8": "4.0.15"
   },
   "nodemonConfig": {
     "ignore": [
