Update debug setup

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "test:lint": "eslint",
     "test:debug": "vitest --inspect-brk",
     "start:watch": "npm-run-all --parallel build:watch start:nodemon",
+    "start:debug": "npm-run-all --parallel build:watch start:nodemon:debug",
     "start:nodemon": "nodemon --inspect=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --delay 1000ms --legacy-watch dist/index.js",
-    "start:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --delay 1000ms --legacy-watch dist/index.js",
+    "start:nodemon:debug": "nodemon --inspect-brk=0.0.0.0 --ext ts,css,njk --watch src --ignore dist --delay 1000ms --legacy-watch dist/index.js",
     "build": "tsc",
     "build:watch": "tsc --watch --sourceMap",
     "build:start": "npm run build && node dist/index.js",
+    "docker:start": "mkdir -p dist && docker compose up",
+    "docker:debug": "mkdir -p dist && docker compose -f compose.yaml -f compose.override.yaml -f compose.debug.yaml up",
     "docker:test": "mkdir -p test-output 2>/dev/null || true && docker compose -p hapi-template-ts-test down -v && docker compose -f compose.yaml -f compose.test.yaml -p hapi-template-ts-test run --build --rm hapi-template-ts",
     "docker:test:watch": "docker compose -p hapi-template-ts-test down -v && docker compose -f compose.yaml -f compose.test.yaml -f compose.test.watch.yaml -p hapi-template-ts-test run --build --rm hapi-template-ts"
   },
